src/test/ui/duplicate/dupe-symbols-3.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-3.rs:19:1
   |
LL | / pub fn fail() {
LL | | //~^ symbol `fail` is already defined
LL | | }
   | |_^

error: aborting due to previous error

